# avs-device-sdk-intel-speech-enabling-kit

./: README.md  install_avs_sdk.sh
ACL/src/Transport/: HTTP2Transport.cpp
AFML/include/AFML/: FocusManager.h
AFML/src/: FocusManager.cpp
AVSCommon/: CMakeLists.txt
AVSCommon/Utils/src/: TimeUtils.cpp
ApplicationUtilities/DefaultClient/src/: CMakeLists.txt  DefaultClient.cpp
CapabilityAgents/: CMakeLists.txt
CapabilityAgents/AIP/src/: AudioInputProcessor.cpp
CapabilityAgents/AIP/test/: AudioInputProcessorTest.cpp
CapabilityAgents/Alerts/src/: AlertsCapabilityAgent.cpp
CapabilityAgents/AudioPlayer/test/: AudioPlayerTest.cpp
CapabilityAgents/Settings/src/: CMakeLists.txt
CapabilityAgents/SpeakerManager/src/: SpeakerManager.cpp
CapabilityAgents/SpeakerManager/test/: SpeakerManagerTest.cpp
CapabilityAgents/TemplateRuntime/src/: TemplateRuntime.cpp
ContextManager/test/: ContextManagerTest.cpp
Integration/: AlexaClientSDKConfig.json
Integration/inputs/: utterance_time_success.opus
Integration/test/: AlertsIntegrationTest.cpp  AudioPlayerIntegrationTest.cpp
KWD/: CMakeLists.txt
MediaPlayer/src/: MediaPlayer.cpp
MediaPlayer/test/: MediaPlayerTest.cpp
SampleApp/: CMakeLists.txt
SampleApp/src/: CMakeLists.txt  ConsolePrinter.cpp  InteractionManager.cpp  KeywordObserver.cpp  PortAudioMicrophoneWrapper.cpp  PortAudioObserver.cpp  SampleApplication.cpp  UIManager.cpp  UIManager.cpp.orig  UserInputManager.cpp  main.cpp
Ubuntu/: automated_install.sh  build.sh  install_avs_sdk.sh
tools/Install/: setup.sh
(+17 files in other folders)
